Fix overflow issue when toolbar buttons wrap on narrow screens. Also move merge action into the record-toolbar (so it disables when a record has been edited)

--- a/frontend/app/assets/stylesheets/archivesspace/toolbar.less
+++ b/frontend/app/assets/stylesheets/archivesspace/toolbar.less
@@ -51,7 +51,6 @@
   #gradient > .vertical(#F3F3F3, #EDEDED);
   .box-shadow(~"1px 1px 2px rgba(0,0,0,.15)");
   min-height: 2em;
-  overflow: visible;
 
   &.formchanged {
     overflow: hidden;
